# StereoLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~
src/: CMakeLists.txt
src/StereoLib/: Camera.cpp  EkfImuIcp.cpp  FloorSubstractor.h  FloorSubstractor.h~  FloorSubstractorCCS.cpp  FloorSubstractorCCS.h  ImageFilteringTools.cpp  ObjectCandidate.cpp  ObjectCandidate.h  ParallelFeatureMatcher.cpp  ParallelFeatureMatcher.h  StereoCameras.cpp  StereoCameras.h
src/StereoLib/map3d/: EnvironmentMap.cpp  EnvironmentMap.cpp~  EnvironmentMap.h  EnvironmentMap.h~
src/StereoLib/ml/: BoW.cpp  BoW.h  RecognitionSystem.h  lda.cpp
src/StereoLib/utils/: LogManager.cpp  LogManager.h
